# pymikuvr

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  example.py
pymikuvr/: __main__.py
pymikuvr/api/: animation.py  base.py  camera.py  capi.py  color.py  locomotion.py  material.py  mesh.py  navigation.py  particles.py  phys.py  player.py  quat.py  render.py  script.py  shape.py  sound.py  sys.py  system.py  texture.py  transform.py  ui.py  vec2.py  vec3.py  video.py
pymikuvr/tests/: test_color.py  test_quat.py  test_transform.py  test_vec2.py  test_vec3.py
resources/: pipeline.txt
resources/materials/: additive.txt  debug.txt  lambert.txt  mmd.txt  mmd_a.txt  mmd_e.txt  mmd_edge.txt  ui.txt  unlit.txt
resources/openvr/: actions.json  binding_holographic_hmd.json  binding_rift.json  binding_vive.json  binding_vive_pro.json  bindings_generic.json  bindings_holographic_controller.json  bindings_hp_reverb2_controller.json  bindings_knuckles.json  bindings_oculus_touch.json  bindings_vive_controller.json  bindings_vive_cosmos_controller.json
resources/shaders/: additive.nsh  fragment.nsh  fragment_normals.nsh  lambert.nsh  mmd.nsh  mmd_normals.nsh  mmd_shadow.nsh  morph.nsh  normals.nsh  pmx.nsh  pmx_edge.nsh  pmx_normals.nsh  pmx_shadow.nsh  pmx_vars.nsh  pmx_vs.nsh  shadow.nshi  shadows.nsh  skeleton.nsh  ui.nsh  unlit.nsh
src/: animation.cpp  animation.h  camera.cpp  camera.h  capi.cpp  container.h  material.cpp  material.h  mesh.cpp  mesh.h  navigation.cpp  navigation.h  phys.cpp  phys.h  player.cpp  player.h  scene.cpp  scene.h  shape.cpp  shape.h  singleton.h  sound.cpp  sound.h  sys.cpp  sys.h  texture.cpp  texture.h  transform.cpp  transform.h  ui.cpp  ui.h  video.cpp  video.h
vs2015/: pymikuvr.sln  pymikuvr.vcxproj  pymikuvr.vcxproj.filters
